Revert "Fix healthchecks"

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,8 @@ services:
     #external_links:
       #- mongo
     depends_on:
-      ipfs: 
-        condition: service_healthy
-      mongo:
-        condition: service_healthy
+      - ipfs
+      - mongo
     networks:
       - vsc-node
     ports:
@@ -49,11 +47,6 @@ services:
       options:
           max-file: "5"
           max-size: "5m"
-    healthcheck:
-      test: echo 'db.runCommand("ping").ok' | mongo --quiet
-      interval: 10s
-      retries: 5
-      timeout: 5s
 
   ipfs:
     container_name: ipfs-vsc
