fix: Update docker-compose.yml with memory limit for service chore: remove depreciated version from docker compose file
Signed-off-by: Brian of London (home imac) <brian@v4v.app>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   vsc-node: # name of the service
     image: vaultec/vsc-node:main
@@ -31,6 +29,10 @@ services:
           max-size: "10m"
     labels:
       - "com.centurylinklabs.watchtower.enable=${AUTO_UPDATE:-true}"
+    deploy:
+      resources:
+        limits:
+          memory: 2G
 
   mongo:
     container_name: mongo_vsc
