--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     image: vscnetwork/go-vsc-node:main
     command: ./vsc-node --init
     environment:
-      - MONGO_URL=mongodb://db:27017
+      - MONGO_URL=mongodb://mongo:27017
     depends_on:
       - mongo
     networks:
@@ -26,7 +26,7 @@ services:
       - 8080:8080
       - 10720:10720
     environment:
-      MONGO_HOST: mongo:27017
+      - MONGO_URL=mongodb://mongo:27017
     volumes:
       - ./data:/home/app/app/data
     logging:
