--- a/multi-core-docker-compose.yml
+++ b/multi-core-docker-compose.yml
@@ -68,7 +68,7 @@ services:
   btcd:
     image: ruimarinho/bitcoin-core:23-alpine
     container_name: vsc-btcd
-    command: -rpcuser='vsc-node-user' -rpcpassword='vsc-node-pass' -rpcallowip=0.0.0.0/0 -rpcbind=0.0.0.0 -prune=550 -dbcache=2048 -server=1 -listen=1
+    command: -rpcuser='vsc-node-user' -rpcpassword='vsc-node-pass' -rpcallowip=0.0.0.0/0 -rpcbind=0.0.0.0 -prune=550 -dbcache=4096 -par=8 -server=1 -listen=1
     restart: always
     volumes:
       - ./.btc-data:/home/bitcoin/.bitcoin
